# anapioficeandfire-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  (+1 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  anapioficeandfire_sdk.py  anapioficeandfire_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  error.py  helpers.py  operation.py  response.py
py/entity/: book_entity.py  character_entity.py  hous_entity.py  house_entity.py
py/feature/: base_feature.py  cache_feature.py  idempotency_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_book_direct.py  test_book_entity.py  test_character_direct.py  test_character_entity.py  test_exists.py  test_feature.py  test_hous_direct.py  test_hous_entity.py  test_house_direct.py  test_house_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_path.py  prepare_query.py  register.py  result_headers.py  transform_response.py
(+482 files in other folders)
